--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="sergio varas">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="styles/layout.css">
-    <title>WDD 131</title>
+    <title>Sergio Varas WDD 131</title>
     
 </head>
 <body>
