--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -5,7 +5,7 @@
     <meta name="author" content="sergio varas">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="styles/layout.css">
-    <title>Sergio Varas 'WDD 131'</title>
+    <title>Sergio Damian Varas 'WDD 131'</title>
     
 </head>
 <body>
