--- a/place.html
+++ b/place.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Sergio Varas" />
-  <meta name="description" content="The following page will show a brief information about Mexico with important data regarding it great history and territory" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta name="author" content="Sergio Varas" >
+  <meta name="description" content="The following page will show a brief information about Mexico with important data regarding it great history and territory" >
   <title>Country Page | wdd131</title>
-  <link rel="stylesheet" href="styles/place.css" />
+  <link rel="stylesheet" href="styles/place.css" >
   <script src="scripts/place.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,9 @@
     <h1>San Andres, Colombia.</h1>
     </header>
     <picture class="hero">
-    <source srcset="image/san-andres.webp" media="(min-width: 768px)" />
-    <source srcset="image/san-andres.webp" media="(max-width: 767px)" />
-    <img src="image/san-andres-movil.webp" alt="San Andres" />
+    <source srcset="image/san-andres.webp" media="(min-width: 768px)" >
+    <source srcset="image/san-andres.webp" media="(max-width: 767px)" >
+    <img src="image/san-andres-movil.webp" alt="San Andres" >
     </picture>
 
     <main>
@@ -35,7 +35,7 @@
 
         <section class="weather">
         <h2>Weather</h2>
-        <img src="image/1530391_weather_clouds_sun_sunny_icon.svg" alt="Weather Icon" class="mobile-icon"/>
+        <img src="image/1530391_weather_clouds_sun_sunny_icon.svg" alt="Weather Icon" class="mobile-icon">
         <p><strong>Temperature:</strong> <span id="temp">30</span>°C</p>
         <p><strong>Conditions:</strong> Sunny</p>
         <p><strong>Wind Speed:</strong> <span id="wind">10</span> mph</p>
