--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -18,11 +18,11 @@
                 <button class="hamburger-menu" aria-label="Toggle navigation">&#9776;</button>
                
                 <ul class="navigation-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Old</a></li>
-                    <li><a href="#">New</a></li>
-                    <li><a href="#">Large</a></li>
-                    <li><a href="#">Small</a></li>
+                    <li><a href="#" data-filter="all">Home</a></li>
+                    <li><a href="#" data-filter="old">Old</a></li>
+                    <li><a href="#" data-filter="new">New</a></li>
+                    <li><a href="#" data-filter="large">Large</a></li>
+                    <li><a href="#" data-filter="small">Small</a></li>
                 </ul>
             </nav>
         </div>
