--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple | wdd 131</title>
     <meta name="author" content="Sergio D. Varas">
+    <link rel="icon" href="image/image.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
