--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Sergio Varas">
-    <title>Site Plan - Centro Gaucho Tradicional Magdalena</title>
+    <title>Site Plan -Traditional Gaucho Center of Magdalena</title>
     <style>
         body {
             font-family: 'Georgia', serif;
